talos/archiveteam-warrior/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warrior
  namespace: archiveteam-warrior
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: warrior.local.asandov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warrior
                port:
                  number: 8001
  tls:
    - hosts:
        - warrior.local.asandov.com
      secretName: warrior-local-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warrior-telegram
  namespace: archiveteam-warrior
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: warrior-telegram.local.asandov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warrior-telegram
                port:
                  number: 8001
  tls:
    - hosts:
        - warrior-telegram.local.asandov.com
      secretName: warrior-telegram-local-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: warrior-urlteam
  namespace: archiveteam-warrior
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: authentik-authentik@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: warrior-urlteam.local.asandov.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: warrior-urlteam
                port:
                  number: 8001
  tls:
    - hosts:
        - warrior-urlteam.local.asandov.com
      secretName: warrior-urlteam-local-tls
